--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "express": "^4.13.4",
+    "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
