--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cfenv": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
+    "ejs": "^2.5.3",
     "express": "^4.13.4",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.1.9",
